# taged

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  README.md  backup_elacticsearch.sh  db.sqlite3  docker-compose-multi-node.yaml  docker-compose.yaml  elasticsearch.yml  env-example  env-vectorizer-example  manage.py  mypy.ini  pyproject.toml  requirements.txt  restore_elasticsearch.sh  run.sh
ansible/: hosts
ansible/playbooks/: deploy.yaml
books/: admin.py  es_index.py  forms.py  models.py  urls.py  views.py
elasticsearch_control/: __init__.py  base_index.py  cache.py  decorators.py  limiter.py  register.py  transport.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  webpack.config.cjs
static/: create_update_note.js  create_update_note_v1.1.0.js  create_update_note_v1.1.3.js  detail_view_note.js  detail_view_note_v1.1.0.js  detail_view_note_v1.1.3.js  login.js  login_v1.1.0.js  login_v1.1.3.js  main.js  main_v1.1.0.js  main_v1.1.3.js
taged/: asgi.py  ckeditor.py  elasticsearch_control.py  settings.py  urls.py  wsgi.py
taged_web/: admin.py  apps.py  elasticsearch_control.py  errors_views.py  es_index.py  filters.py  forms.py  helpers.py  image_decoder.py  models.py  signals.py  static_settings.py  urls.py  vectorizer.py  views.py
templates/: base.html  edit_post.html  footer.html  home.html  navbar.html  pagination.html  post.html  svg-icons.html  tags.html
vectorizer/: .dockerignore  Dockerfile  main.py  requirements.txt
(+154 files in other folders)
